# cinna-cli

./: .gitignore  LICENSE.md  README.md  pyproject.toml
docs/: README.md
src/cinna/: __init__.py  auth.py  bootstrap.py  client.py  config.py  console.py  context.py  dev.py  docker.py  errors.py  logging.py  main.py  mcp_proxy.py  mutagen_runtime.py  sync.py  sync_session.py  sync_ssh_shim.py  sync_tui.py
src/cinna/templates/: CLAUDE.md.template
tests/: conftest.py  test_auth.py  test_bootstrap.py  test_client.py  test_config.py  test_context.py  test_docker.py  test_main.py  test_mutagen_runtime.py  test_sync.py  test_sync_session.py  test_sync_ssh_shim.py
