[project]
name = "cinna-cli"
version = "0.1.0"
description = "Local development CLI for Cinna Core agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "textual>=0.50",
    "mcp>=1.0",
    "websockets>=12.0",
]

[project.scripts]
cinna = "cinna.main:cli"
cinna-sync-ssh = "cinna.sync_ssh_shim:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cinna"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]
